vertical header + mobile menu alignment issue - 8272

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9298,8 +9298,7 @@ body.default-breakpoint .after-header-content {
         transform: translateX(-50%);
   }
   body.default-breakpoint .oceanwp-mobile-menu-icon {
-    display: -ms-inline-flexbox;
-    display: inline-flex;
+    display: block;
   }
   body.default-breakpoint #top-bar.has-no-content #top-bar-social {
     text-align: center;
